fix bug so strain content does stretch the entire width of page content

--- a/worm_strains/static/css/strain.css
+++ b/worm_strains/static/css/strain.css
@@ -1,10 +1,11 @@
 #strain-sections {
 	float: left;
-	margin: 0 -10px;
+	width: 1000px;
+	margin-left: -10px;
 }
 
 .strain-section {
-	min-width: 100%;
+	width: 100%;
 	margin: 40px 0;
 }
 
